deploy/k8s/manifests/20-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: sharpcampus
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - name: redis
              containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: sharpcampus
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
